--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
-Flask
-Flask-SQLAlchemy
-Flask-Login
-APScheduler
-requests
-lxml
-beautifulsoup4
-dateutil
-easyocr
-pytz
-pandas
-Pillow
-anticaptchaofficial
-pytesseract
-telegram-python
-gunicorn
+Flask==2.3.2
+Flask-SQLAlchemy==3.0.5
+Flask-Login==0.6.2
+APScheduler==3.10.1
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+python-dateutil==2.8.2
+easyocr==1.7.0
+pytz==2023.3
+pandas==2.0.3
+Pillow==10.0.1
+anticaptchaofficial==1.0.9
+pytesseract==0.3.10
+python-telegram-bot==20.3
+gunicorn==21.2.0
+werkzeug==2.3.7
+swiftshadow==0.1.0
